--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cs124",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://cherrymar.github.io/cs124",
+  "homepage": "https://cherrymar.github.io/cs124",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
