--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^9.1.2",
+    "material-ui-rating": "^4.0.0-beta.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropdown-select": "^4.7.4",
+    "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
