--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
+    "react-textarea-autosize": "^8.3.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
