--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.1.2",
     "material-ui-rating": "^4.0.0-beta.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropdown-select": "^4.7.4",
