--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dropdown": "^1.9.2",
     "react-dropdown-select": "^4.7.4",
     "react-firebase-hooks": "^3.0.4",
+    "react-responsive": "^9.0.0-beta.4",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
     "react-textarea-autosize": "^8.3.3",
