--- a/package.json
+++ b/package.json
@@ -4,33 +4,50 @@
   "private": true,
   "homepage": "https://cherrymar.github.io/cs124",
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel": "^6.23.0",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.1.2",
+    "ci": "^2.1.1",
+    "firebase": "^6.6.2",
     "firebase-admin": "^10.0.0",
+    "formik": "^1.5.7",
+    "formik-wizard-form": "^1.0.0",
     "material-ui-rating": "^4.0.0-beta.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^16.8.6",
     "react-dropdown": "^1.9.2",
     "react-dropdown-select": "^4.7.4",
-    "react-firebase-hooks": "^3.0.4",
-    "react-responsive": "^9.0.0-beta.4",
-    "react-scripts": "4.0.3",
+    "react-firebase-hooks": "^3.0.1",
+    "react-google-login": "^5.0.4",
+    "react-redux": "^7.1.0",
+    "react-redux-firebase": "^2.2.6",
+    "react-responsive": "^9.0.0-beta.5",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
     "react-star-ratings": "^2.3.0",
     "react-textarea-autosize": "^8.3.3",
-    "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2"
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-firebase": "^0.3.3",
+    "redux-firestore": "^0.8.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2",
+    "web-vitals": "^2.1.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
